ipc/ipdl/test/ipdl/error/compressCtor.ipdl
include protocol compressCtorManagee;

intr protocol compressCtor {
    manages compressCtorManagee;

parent:
    async compressCtorManagee() compress;
};
